# DataManagerWebApp

./: .dockerignore  .gitlab-ci.deploy.yml  .gitlab-ci.yml  .gitlint  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
docs/: meta_data_sample_1.json  meta_data_sample_2.json  meta_data_sample_3.json
scripts/: install.sh
src/: add_logo_and_favicon_remove_hamburger_icon.py  constants.py  convert_timestamp_to_date_only.py  database_handler.py  date_validate.py  fps_check.py  json_file_uploader.py  multiple_file_validation.py  save_multiple_files.py  single_file_path_generator.py  validate_resolution.py
